Update api schemas and clean up app layout and constants
